# newtonfractal

./: LICENSE  README.md  pyproject.toml
newtonfractal/: .Result  fractal.py  numpyfractal.py
